<resources>
    <string name="app_name">Education Demo</string>

    <!-- string data for Login and Registarion. -->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="Mobile">Mobile</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">Welcome</string>
    <string name="select_your_class"><i>Select your Class</i></string>
    <string name="class_11">Class 11</string>
    <string name="class_12">Class 12</string>
    <string name="select_your_class_streams"><i>Select Your Stream</i></string>
    <string name="streams_Science">Science</string>
    <string name="streams_Arts">Arts</string>
    <string name="streams_comm">Commerce</string>

    <string name="welcome_to_biology"><i>Welcome to Biology</i></string>

    <string name="art_subject_1_">Subject 1</string>
    <string name="art_subject_6">Subject 6</string>
    <string name="art_subject_5">Subject 5</string>
    <string name="art_subject_4">Subject 4</string>
    <string name="art_subject_3">Subject 3</string>
    <string name="art_subject_2">Subject 2</string>
    <string name="welcome_art_student">Welcome Art Student</string>
    <string name="science_physics">Physics</string>
    <string name="welcome_science_student"><i>Welcome Science Student</i></string>
    <string name="science_biology">Biology</string>
    <string name="science_chemistry">Chemistry</string>
    <string name="science_sanskrit">Sanskrit</string>
    <string name="science_english">English</string>
    <string name="science_mathematics">Mathematics</string>
    <string name="welcome_commerce_student">Welcome Commerce Student</string>
    <string name="comm_subject_1">Subject 1</string>
    <string name="comm_subject_2">Subject 2</string>
    <string name="comm_subject_3">Subject 3</string>
    <string name="comm_subject_4">Subject 4</string>
    <string name="comm_subject_5">Subject 5</string>
    <string name="comm_subject_6">Subject 6</string>
    <string name="welcome_to_biology_class">Welcome to Biology Class</string>
    <string name="biological_classification_classXI_Bio">BIOLOGICAL CLASSIFICATION</string>
    <string name="diversity_in_the_living_world_classXI_bio">Diversity in the Living World</string>
    <string name="plant_kingdom_classXI_Bio">PLANT KINGDOM</string>
    <string name="animal_kingdom_classXI_Bio">ANIMAL KINGDOM</string>
    <string name="the_living_world_classXI_bio">The Living World</string>
    <string name="u1_btn_prev"><![CDATA[<<]]></string>
    <string name="u1_btn_next"><![CDATA[>>]]></string>
    <string name="unit_1_bio_class_XI">Unit 1</string>
    <string name="part_i_chemistry">Part - I</string>
    <string name="chem_part1_some_basic_concepts_of_chemistry">SOME BASIC CONCEPTS OF CHEMISTRY</string>
    <string name="chem_part1_structure_of_atom">STRUCTURE OF ATOM</string>
    <string name="chem_part1_classification_of_elements_and_periodicity_in_properties">CLASSIFICATION OF ELEMENTS AND PERIODICITY IN PROPERTIES</string>
    <string name="chem_part1_chemical_bonding_and_molecular_structure">CHEMICAL BONDING AND MOLECULAR STRUCTURE</string>
    <string name="chem_part1_states_of_matter">STATES OF MATTER</string>
    <string name="chem_part1_thermodynamics">THERMODYNAMICS</string>
    <string name="chem_part1_equilibrium">EQUILIBRIUM</string>
    <string name="part_1_math_classXI">Part - 1</string>
    <string name="math_chap1_sets">Sets</string>
    <string name="math_chap2_relations_and_functions">Relations and Functions</string>
    <string name="math_chap3_trigonometric_functions">Trigonometric Functions</string>
    <string name="math_chap4_principle_of_mathematical_induction">Principle of Mathematical Induction</string>
    <string name="math_chap5_complex_numbers_and_quadratic_equations">Complex Numbers and Quadratic Equations</string>
    <string name="phy_chap5_laws_of_motion">LAWS OF MOTION</string>
    <string name="phy_chap4_motion_in_a_plane">MOTION IN A PLANE</string>
    <string name="phy_chap3_motion_in_a_straight_line">MOTION IN A STRAIGHT LINE</string>
    <string name="phy_chap2_units_and_measurements">UNITS AND MEASUREMENTS</string>
    <string name="phy_chap1_physical_world">PHYSICAL WORLD</string>
    <string name="chem_part_1">Part - 1</string>
    <string name="sanskrit_chap5_veerha_sarvdamanha">वीर: सर्वदमन:</string>
    <string name="sanskrit_chap4_rutuchrya">ऋतुचर्या</string>
    <string name="sanskrit_chap3_sukitsudha">सूक्तिसुधा</string>
    <string name="sanskrit_chap2_sauwarno_nakulaha">सौवर्णो नकुल:</string>
    <string name="sanskrit_chap1_kushalprashsanam">कुशलप्रशासनम् </string>
    <string name="sanskrit_part1">प्रथमो भागः</string>
    <string name="english_woven_words">WOVEN WORDS</string>
    <string name="english_english_for_class_xi">ENGLISH FOR CLASS XI</string>
    <string name="eng_part1_short_stories_introduction">Short Stories Introduction</string>
    <string name="eng_sec1_chap1_the_lament_anton_chekhov">The Lament <br>Anton Chekhov</br></string>
    <string name="eng_sec1_chap2_a_pair_of_mustachios_mulk_raj_anand">A Pair of Mustachios <br>Mulk Raj Anand</br></string>
    <string name="eng_sec1_chap3_the_rocking_horse_winner_d_h_lawrence">The Rocking-horse Winner <br>D.H.Lawrence</br></string>
    <string name="eng_part2_poetry_introduction">Poetry Introduction</string>
    <string name="eng_sec2_chap1_the_peacock_sujata_bhatt">The Peacock <br>Sujata Bhatt</br></string>
    <string name="eng_sec2_chap2_let_me_not_to_the_marriage_of_true_minds">Let me Not to the <br>Marriage of True Minds</br> <br>William Shakespeare</br></string>
    <string name="eng_sec2_chap3_coming_philip_larkin">Coming <br>Philip Larkin (Haiku)</br> </string>
    <string name="eng_part3_essays_introduction">Essays Introduction</string>
    <string name="eng_sec3_chap1_my_watch_mark_twain">My Watch <br>Mark Twain</br></string>
    <string name="eng_sec3_chap2_my_three_passions_bertrand_russell">My Three Passions <br>Bertrand Russell</br></string>
    <string name="eng_sec3_chap3_patterns_of_creativity_s_chandrasekhar">Patterns of Creativity <br>S.Chandrasekhar</br></string>

    <!-- You can add more data -->

</resources>