<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".comm">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/welcome_commerce_student"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/comm_subject_1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/comm_subject_2"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/comm_subject_3"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/comm_subject_4"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/comm_subject_5"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/comm_subject_6"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>