<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@color/colorPrimary"
    tools:context=".chapter_list_sanskrit">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/txt_unit"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/sanskrit_part1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/u1_btn1_chap_one"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/sanskrit_chap1_kushalprashsanam"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:background="@drawable/prev_next_round_btn" />
        <Button
            android:id="@+id/u1_btn2_chap_two"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/sanskrit_chap2_sauwarno_nakulaha"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:background="@drawable/prev_next_round_btn"/>
        <Button
            android:id="@+id/u1_btn2_chap_three"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/sanskrit_chap3_sukitsudha"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/prev_next_round_btn"/>
        <Button
            android:id="@+id/u1_btn2_chap_four"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/sanskrit_chap4_rutuchrya"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/prev_next_round_btn"/>
        <Button
            android:id="@+id/u1_btn2_chap_five"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/sanskrit_chap5_veerha_sarvdamanha"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/prev_next_round_btn"/>
        <Button
            android:id="@+id/u1_btn2_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/u1_btn_next"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:onClick="displayToastMsg"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/u1_btn2_prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/u1_btn_prev"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>