<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="50dp"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@color/colorPrimary"
    tools:context=".sci">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/welcome_science_student"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btn1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/science_biology"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@drawable/round" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/science_chemistry"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/science_mathematics"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/science_physics"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/science_sanskrit"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/round"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/science_english"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:background="@drawable/round"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>