<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@color/colorPrimary"
    tools:context=".class_11_12">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txt_select_class"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/select_your_class"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn1_11"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/class_11"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:background="@drawable/round"/>
    <Button
        android:id="@+id/btn2_12"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/class_12"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:onClick="displayToastMsg"
        android:background="@drawable/round"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>